# modelica-buildings

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Carnot_TEva_HighTemperature.mo  Carnot_TEva_etaPL.mo  README.md  Unnamed2.mo  Untitled.ipynb  jmodelica.py  package.mo  requirements.txt  runLoop.sh  runOCTExamples.sh  setenv.sh  simulateOCTExamples.sh  var_rename.sh
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md
.github/workflows/: formatting.yml  sync_gmt_mbl_master.yml
.impact/: project.json
Airflow/: package.mo  package.order
Airflow/Multizone/: DoorDiscretizedOperable.mo  MediumColumn.mo  MediumColumnDynamic.mo  Orifice.mo  UsersGuide.mo  ZonalFlow_ACS.mo  package.mo
BaseClasses/: BaseIcon.mo
BoundaryConditions/: Types.mo  package.mo
BoundaryConditions/SkyTemperature/: package.mo
BoundaryConditions/SolarGeometry/: IncidenceAngle.mo  package.order
BoundaryConditions/SolarIrradiation/: DirectTiltedSurface.mo  package.mo
BoundaryConditions/WeatherData/: package.order
Buildings/: .copiedFiles.txt  .gitattributes  Buildings_Experimental_ScalableModels_ThermalZones_MultiZone.fmu  chwdx.py  convert_script_before_sh_temp.mos  dsin.txt  failure  ffd.lib  filled_step.py  isat_1.op  issue1137_rename_scripts_temp.sh  issue1137_rename_scripts_temp.txt  legal.html  log.ffd  log.isat  modelDescription.xml  move_classes_temp.py  output.cfd  package.mo  package.order  rename_models.py  result.plt  statistics.json  status.  temp_refactor.py  unsteady.plt
Buildings 1.5/: package.mo
Buildings 2.0.0/: legal.html
Buildings/Resources/src/ISAT/MinGW/: CMakeLists.txt
Buildings/Resources/src/fmi-library/: CMakeLists.txt  install.sh
Buildings/Resources/src/fmi-library/doc/: FMILIB_Acknowledgements.txt  FMILIB_License.txt  FMILIB_Readme.txt
Buildings/Resources/src/fmi-library/doc/FMILibrary/: FMILIB_License.txt  FMILIB_Readme.txt
Buildings/Resources/src/fmi-library/include/: fmilib.h  fmilib_config-darwin64.h  fmilib_config-linux64.h  fmilib_config-win64.h  fmilib_config.h
Buildings/Resources/src/fmi-library/include/FMI/: fmi_import_context.h  fmi_import_options.h  fmi_import_terminals_and_icons.h  fmi_import_util.h  fmi_util.h  fmi_util_options.h  fmi_version.h
Buildings/Resources/src/fmi-library/include/FMI1/: fmi1_enums.h  fmi1_functions.h  fmi1_import.h  fmi1_import_capabilities.h  fmi1_import_capi.h  fmi1_import_convenience.h  fmi1_import_cosim.h  fmi1_import_type.h  fmi1_import_unit.h  fmi1_import_variable.h  fmi1_import_variable_list.h  fmi1_import_vendor_annotations.h  fmi1_types.h  fmiFunctions.h  fmiModelFunctions.h  fmiPlatformTypes.h
Buildings/Resources/src/fmi-library/include/FMI2/: fmi2_enums.h  fmi2_function_types.h  fmi2_functions.h  fmi2_import.h  fmi2_import_capi.h  fmi2_import_convenience.h  fmi2_import_type.h  fmi2_import_unit.h  fmi2_import_variable.h  fmi2_import_variable_list.h  fmi2_types.h  fmi2_xml_callbacks.h
Buildings/Resources/src/fmi-library/include/FMI3/: fmi3_enums.h  fmi3_function_types.h  fmi3_import.h  fmi3_import_capi.h  fmi3_import_convenience.h  fmi3_import_type.h  fmi3_import_unit.h  fmi3_import_variable.h  fmi3_import_variable_list.h  fmi3_types.h  fmi3_xml_callbacks.h
Buildings/Resources/src/fmi-library/include/JM/: jm_callbacks.h  jm_named_ptr.h  jm_portability.h  jm_stack.h  jm_string_set.h  jm_types.h  jm_vector.h  jm_vector_template.h
Buildings/Resources/src/fmi-library/src/: fmilib_config.h
BuildingsPy/: CHANGES.txt  MANIFEST.in  Makefile  README  license.txt  setenv.sh  setup.py
Controls/: package.mo
Districts/: dsin.txt  package.mo  package.order
HeatTransfer/: Types.mo  package.mo
IceStorage/: IceTank.mo  package.mo  package.order
IceTank/: IceTank.mo  package.mo  package.order
Media/: package.order
OCTExamples/: generateListOfModels.sh  models.txt  package.mo  package.order
Occupancy/: package.mo
Rooms/: UsersGuide.mo  package.mo  package.order
Utilities/: package.mo
Validation_plots/: UA_validation.mos  heat_pump_plant.mos  integrated_plant.mos
cmake/: FindOrImportJModelica.cmake
help/: Buildings_Airflow.html  Buildings_Airflow_Multizone.html  Buildings_Airflow_Multizone_BaseClasses.html  Buildings_Airflow_Multizone_BaseClasses_Medium.html  Buildings_Airflow_Multizone_UsersGuide.html  Buildings_BoundaryConditions_SolarGeometry.html  Buildings_BoundaryConditions_SolarGeometry_BaseClasses.html  Buildings_BoundaryConditions_SolarIrradiation_BaseClasses_Examples.html  Buildings_BoundaryConditions_SolarIrradiation_Examples.html  Buildings_BoundaryConditions_UsersGuide.html  Buildings_BoundaryConditions_WeatherData.html  Buildings_BoundaryConditions_WeatherData_BaseClasses_Examples.html  Buildings_Controls.html  Buildings_Controls_Continuous_Examples.html  Buildings_Controls_Discrete_Examples.html  Buildings_Controls_SetPoints_Examples.html  Buildings_Examples.html  Buildings_Examples_ChillerPlant.html  Buildings_Examples_ChillerPlant_BaseClasses_Controls.html  Buildings_Examples_ChillerPlant_MediumCW.html  Buildings_Examples_DualFanDualDuct.html  Buildings_Examples_DualFanDualDuct_Controls_Examples.html  Buildings_Examples_DualFanDualDuct_MediumA.html  Buildings_Examples_DualFanDualDuct_MediumW.html  Buildings_Examples_DualFanDualDuct_ThermalZones.html  Buildings_Examples_HydronicHeating_MediumA.html  Buildings_Examples_Tutorial_Boiler.html  Buildings_Examples_Tutorial_Boiler_MediumA.html  Buildings_Examples_Tutorial_SpaceCooling.html  Buildings_Examples_Tutorial_SpaceCooling_MediumA.html  Buildings_Examples_Tutorial_SpaceCooling_MediumW.html  Buildings_Examples_VAVCO2_BaseClasses.html  Buildings_Examples_VAVReheat.html  Buildings_Examples_VAVReheat_Controls_Examples.html  Buildings_Examples_VAVReheat_MediumA.html  Buildings_Examples_VAVReheat_MediumW.html  Buildings_Fluid_Actuators.html  Buildings_Fluid_Actuators_BaseClasses.html  Buildings_Fluid_Actuators_BaseClasses_Examples.html  Buildings_Fluid_Actuators_Dampers.html  (+135 more)
postprocess/: DyMat.py
spawn-FanCoilUnit.floor1/: ModelicaBuildingsEnergyPlus.json
userGuide/: Makefile
(+44996 files in other folders)
